// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migrator generate js schema migration: migration-js-dump 1`] = `
Object {
  "code": "'use strict';
Object.defineProperty(exports, '__esModule', { value: true });
const Migration = require('@mikro-orm/migrations').Migration;

class Migration20191013214813 extends Migration {

  async up() {
    this.addSql('alter table \`book2\` drop \`foo\`;');

    this.addSql('alter table \`test2\` drop foreign key \`test2_foo___bar_foreign\`;');
    this.addSql('alter table \`test2\` drop index \`test2_foo___bar_unique\`;');
    this.addSql('alter table \`test2\` drop index \`test2_foo___bar_index\`;');
    this.addSql('alter table \`test2\` drop \`foo___bar\`;');
    this.addSql('alter table \`test2\` drop \`foo___baz\`;');
  }

}
exports.Migration20191013214813 = Migration20191013214813;
",
  "diff": Array [
    "alter table \`book2\` drop \`foo\`;",
    "",
    "alter table \`test2\` drop foreign key \`test2_foo___bar_foreign\`;",
    "alter table \`test2\` drop index \`test2_foo___bar_unique\`;",
    "alter table \`test2\` drop index \`test2_foo___bar_index\`;",
    "alter table \`test2\` drop \`foo___bar\`;",
    "alter table \`test2\` drop \`foo___baz\`;",
    undefined,
    undefined,
  ],
  "fileName": "Migration20191013214813.js",
}
`;

exports[`Migrator generate migration with custom name: migration-dump 1`] = `
Object {
  "code": "import { Migration } from '@mikro-orm/migrations';

export class Migration20191013214813 extends Migration {

  async up(): Promise<void> {
    this.addSql('alter table \`book2\` drop \`foo\`;');

    this.addSql('alter table \`test2\` drop foreign key \`test2_foo___bar_foreign\`;');
    this.addSql('alter table \`test2\` drop index \`test2_foo___bar_unique\`;');
    this.addSql('alter table \`test2\` drop index \`test2_foo___bar_index\`;');
    this.addSql('alter table \`test2\` drop \`foo___bar\`;');
    this.addSql('alter table \`test2\` drop \`foo___baz\`;');
  }

}
",
  "diff": Array [
    "alter table \`book2\` drop \`foo\`;",
    "",
    "alter table \`test2\` drop foreign key \`test2_foo___bar_foreign\`;",
    "alter table \`test2\` drop index \`test2_foo___bar_unique\`;",
    "alter table \`test2\` drop index \`test2_foo___bar_index\`;",
    "alter table \`test2\` drop \`foo___bar\`;",
    "alter table \`test2\` drop \`foo___baz\`;",
    undefined,
    undefined,
  ],
  "fileName": "migration-20191013214813.ts",
}
`;

exports[`Migrator generate schema migration: migration-dump 1`] = `
Object {
  "code": "import { Migration } from '@mikro-orm/migrations';

export class Migration20191013214813 extends Migration {

  async up(): Promise<void> {
    this.addSql('alter table \`book2\` drop \`foo\`;');

    this.addSql('alter table \`test2\` drop foreign key \`test2_foo___bar_foreign\`;');
    this.addSql('alter table \`test2\` drop index \`test2_foo___bar_unique\`;');
    this.addSql('alter table \`test2\` drop index \`test2_foo___bar_index\`;');
    this.addSql('alter table \`test2\` drop \`foo___bar\`;');
    this.addSql('alter table \`test2\` drop \`foo___baz\`;');
  }

}
",
  "diff": Array [
    "alter table \`book2\` drop \`foo\`;",
    "",
    "alter table \`test2\` drop foreign key \`test2_foo___bar_foreign\`;",
    "alter table \`test2\` drop index \`test2_foo___bar_unique\`;",
    "alter table \`test2\` drop index \`test2_foo___bar_index\`;",
    "alter table \`test2\` drop \`foo___bar\`;",
    "alter table \`test2\` drop \`foo___baz\`;",
    undefined,
    undefined,
  ],
  "fileName": "Migration20191013214813.ts",
}
`;

exports[`Migrator up/down params [all or nothing disabled]: all-or-nothing-disabled 1`] = `
Array [
  "select table_name as table_name from information_schema.tables where table_type = 'BASE TABLE' and table_schema = schema() (via write connection '127.0.0.1')",
  "create table \`mikro_orm_migrations\` (\`id\` int unsigned not null auto_increment primary key, \`name\` varchar(255), \`executed_at\` datetime default current_timestamp) (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "begin (via write connection '127.0.0.1')",
  "select 1 (via write connection '127.0.0.1')",
  "commit (via write connection '127.0.0.1')",
  "insert into \`mikro_orm_migrations\` (\`name\`) values (?) (via write connection '127.0.0.1')",
  "select table_name as table_name from information_schema.tables where table_type = 'BASE TABLE' and table_schema = schema() (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "begin (via write connection '127.0.0.1')",
  "commit (via write connection '127.0.0.1')",
  "delete from \`mikro_orm_migrations\` where \`name\` = ? (via write connection '127.0.0.1')",
  "select table_name as table_name from information_schema.tables where table_type = 'BASE TABLE' and table_schema = schema() (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "begin (via write connection '127.0.0.1')",
  "select 1 (via write connection '127.0.0.1')",
  "commit (via write connection '127.0.0.1')",
  "insert into \`mikro_orm_migrations\` (\`name\`) values (?) (via write connection '127.0.0.1')",
  "select table_name as table_name from information_schema.tables where table_type = 'BASE TABLE' and table_schema = schema() (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "begin (via write connection '127.0.0.1')",
  "commit (via write connection '127.0.0.1')",
  "delete from \`mikro_orm_migrations\` where \`name\` = ? (via write connection '127.0.0.1')",
  "select table_name as table_name from information_schema.tables where table_type = 'BASE TABLE' and table_schema = schema() (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "begin (via write connection '127.0.0.1')",
  "select 1 (via write connection '127.0.0.1')",
  "commit (via write connection '127.0.0.1')",
  "insert into \`mikro_orm_migrations\` (\`name\`) values (?) (via write connection '127.0.0.1')",
  "select table_name as table_name from information_schema.tables where table_type = 'BASE TABLE' and table_schema = schema() (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select table_name as table_name from information_schema.tables where table_type = 'BASE TABLE' and table_schema = schema() (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "begin (via write connection '127.0.0.1')",
  "commit (via write connection '127.0.0.1')",
  "delete from \`mikro_orm_migrations\` where \`name\` = ? (via write connection '127.0.0.1')",
]
`;

exports[`Migrator up/down params [all or nothing enabled]: all-or-nothing 1`] = `
Array [
  "select table_name as table_name from information_schema.tables where table_type = 'BASE TABLE' and table_schema = schema() (via write connection '127.0.0.1')",
  "create table \`mikro_orm_migrations\` (\`id\` int unsigned not null auto_increment primary key, \`name\` varchar(255), \`executed_at\` datetime default current_timestamp) (via write connection '127.0.0.1')",
  "begin (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "savepointtrx\\\\d+ (via write connection '127.0.0.1')",
  "select 1 (via write connection '127.0.0.1')",
  "release savepointtrx\\\\d+ (via write connection '127.0.0.1')",
  "insert into \`mikro_orm_migrations\` (\`name\`) values (?) (via write connection '127.0.0.1')",
  "commit (via write connection '127.0.0.1')",
  "select table_name as table_name from information_schema.tables where table_type = 'BASE TABLE' and table_schema = schema() (via write connection '127.0.0.1')",
  "begin (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "savepointtrx\\\\d+ (via write connection '127.0.0.1')",
  "release savepointtrx\\\\d+ (via write connection '127.0.0.1')",
  "delete from \`mikro_orm_migrations\` where \`name\` = ? (via write connection '127.0.0.1')",
  "commit (via write connection '127.0.0.1')",
  "select table_name as table_name from information_schema.tables where table_type = 'BASE TABLE' and table_schema = schema() (via write connection '127.0.0.1')",
  "begin (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "savepointtrx\\\\d+ (via write connection '127.0.0.1')",
  "select 1 (via write connection '127.0.0.1')",
  "release savepointtrx\\\\d+ (via write connection '127.0.0.1')",
  "insert into \`mikro_orm_migrations\` (\`name\`) values (?) (via write connection '127.0.0.1')",
  "commit (via write connection '127.0.0.1')",
  "select table_name as table_name from information_schema.tables where table_type = 'BASE TABLE' and table_schema = schema() (via write connection '127.0.0.1')",
  "begin (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "savepointtrx\\\\d+ (via write connection '127.0.0.1')",
  "release savepointtrx\\\\d+ (via write connection '127.0.0.1')",
  "delete from \`mikro_orm_migrations\` where \`name\` = ? (via write connection '127.0.0.1')",
  "commit (via write connection '127.0.0.1')",
  "select table_name as table_name from information_schema.tables where table_type = 'BASE TABLE' and table_schema = schema() (via write connection '127.0.0.1')",
  "begin (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "savepointtrx\\\\d+ (via write connection '127.0.0.1')",
  "select 1 (via write connection '127.0.0.1')",
  "release savepointtrx\\\\d+ (via write connection '127.0.0.1')",
  "insert into \`mikro_orm_migrations\` (\`name\`) values (?) (via write connection '127.0.0.1')",
  "commit (via write connection '127.0.0.1')",
  "select table_name as table_name from information_schema.tables where table_type = 'BASE TABLE' and table_schema = schema() (via write connection '127.0.0.1')",
  "begin (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "commit (via write connection '127.0.0.1')",
  "select table_name as table_name from information_schema.tables where table_type = 'BASE TABLE' and table_schema = schema() (via write connection '127.0.0.1')",
  "begin (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "select * from \`mikro_orm_migrations\` order by \`id\` asc (via write connection '127.0.0.1')",
  "savepointtrx\\\\d+ (via write connection '127.0.0.1')",
  "release savepointtrx\\\\d+ (via write connection '127.0.0.1')",
  "delete from \`mikro_orm_migrations\` where \`name\` = ? (via write connection '127.0.0.1')",
  "commit (via write connection '127.0.0.1')",
]
`;
